Try fixing overflowing in BoundlessLife Image

--- a/Styles/Featured-work.css
+++ b/Styles/Featured-work.css
@@ -53,4 +53,10 @@ h1 {
     opacity: 1;
     transition: opacity 0.5s;
   }
+
+  .no-hover-thumbnail {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
 }
